--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>모델 포트폴리오</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <header>
     <h1>김향희</h1>
@@ -13,29 +14,42 @@
     <p>시니어 모델 | 키즈 모델 수업</p>
   </header>
 
-  <section class="profile">
-    <img src="images/profile.jpeg" alt="프로필 사진" />
-    <div class="intro">
+  <section class="intro-section">
+    <div class="intro-content">
+      <div class="intro-left">
+        <img src="images/profile.jpeg" alt="모델 사진">
+      </div>
+      <div class="intro-right">
       <h2>소개</h2>
       <p>
-        한국모델협회 스페이드제이 모델로 활동하고있는 강사 김향희입니다.
+        한국모델협회 스페이드제이 모델로 활동하고있는 강사 김향희입니다.</br>
         감각적인 포즈와 유연한 표현력을 무기로 활동 중입니다.
       </p>
+      <p>
+        <h2>약력</h2>
+        <ul>
+          <li>경력 1</li>
+          <li>경력 2</li>
+          <li>경력 3</li>
+        </ul>
+      </p>
     </div>
-  </section>
-
+  </div>
+</section>
+  
   <section class="portfolio">
     <h2>포트폴리오</h2>
-    <div class="gallery">
-      <img src="images/image1.jpeg" alt="화보1" />
-      <img src="images/image2.jpeg" alt="화보2" />
-      <img src="images/image3.jpeg" alt="화보3" />
-      <!-- 더 추가 가능 -->
+    <div class="slider-container" id="sliderContainer">
+      <div class="slider-track" id="sliderTrack">
+        <!-- JS에서 이미지 복제 및 구성 -->
+      </div>
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 김향희</p>
+<footer>
+    <p>&copy; 2025 김향희. All rights reserved.</p>
+    <p><a href="https://www.instagram.com/model_hyanghee1?igsh=cTM1bXo1N2R3MmNt">Instagram</a></p>
   </footer>
+  <script src="script.js" defer></script>
 </body>
 </html>
